--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Jakub Roztocil, Lars Schöning, and David Golightly",
   "main": "dist/es5/rrule.js",
   "module": "dist/esm/index.js",
+  "exports": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "repository": {
     "type": "git",
